# newspaper3k-haystack

./: LICENSE  README.md  setup.py
app/: README.md  setup.cfg
app/src/newspaper3k_haystack/: __init__.py  newspaper3k_haystack.py
app/src/newspaper3k_haystack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: nespaper3k_nodes_example.ipynb
src.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
