[metadata]
name = newspaper3k_haystack
version = 0.1.1
author = Josep Maria Rocafort
author_email = josem.rocafortf@gmail.com
description = A simple newspaper3k haystack node wrapper. A node for scraping articles given a link and a crawler.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Haradai/newspaper3k_haystack
project_urls =
    Bug Tracker = https://github.com/Haradai/newspaper3k_haystack/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
python_requires = >=3.6
install_requires =
    newspaper3k
    beautifulsoup4
    tqdm
    farm-haystack